--- a/style.css
+++ b/style.css
@@ -194,9 +194,18 @@ text-align: center;
     margin-left: 38.35px;
     margin-top: 30px;
   }
-    #story1 img{
+    .story1 img{
     border-radius: 16px 16px 0px 0px;
 
+
+  }
+  .story1{
+   
+    background-color: white;
+    border-radius: 16px;
+    width: 545px;
+
+    
   }
   .new-btn{
     border-radius: 47.93px;
@@ -214,35 +223,151 @@ margin-top: -314px;
 text-align: center;
 
   }
+  #story-bg{
+    background-image: url(assets/bg.png),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    
+    
+  }
+  .story{
+    justify-content: space-around;
+  }
  .new-btn1{
-  border-radius: 47.93px;
-
-width: 174.51px;
-height: 38.35px;
-border: none;
-color: rgb(255, 255, 255);
-font-size: 1rem;
-font-weight: 500;
-text-align: center;
-background: rgb(149, 178, 38);
-margin-left: -260px;
-margin-top: -157px;
+ position: relative;
+ left: 38px;
+ top: -30px;
+ border-radius: 48px;
+ background-color: rgb(110, 255, 110);
+ border: 0px;
+ font-size: 1.2rem;
+ font-weight: 500;
+ padding: 17px 20px;
+ color: white;
  }
  .s-describe{
   margin-left: 38.35px;
+  margin-top: -20px;
+
+ }
+ .s-card img{
+   border-radius: 16px 16px 0px 0px;;
  }
  
- .story{
-  
+ .s-card{
+  width: 290.69px;
+  height: 301.61px;
+  background-color: white;
+  border-radius: 16px 16px 16px 16px;
  }
  
   .grid-container{
    display: grid;
    grid-template-columns: repeat(2,1fr);
-    gap: 30px;
-    
+   gap: 10px;
   }
+ .btn1{
   
+width: 197px;
+height: 50px;
+
+
+justify-content: center;
+align-items: center;
+gap: 10;
+padding: 10px;
+border-radius: 12px;
+background: rgb(17, 17, 17);
+color: white;
+font-size: 20px;
+font-weight: 700;
+margin-left: 600px;
+margin-top: 80px;
+margin-bottom: 60px; 
+}
+.main-footer{
+  max-width: 1440px;
+  margin: 0px auto;
+  background-color: blueviolet;
+  justify-content: space-between;
+  
+}
+
+footer {
+  background-color: #0288D1;
+  color: white;
+  padding: 40px 0;
+  max-width: 1440px;
+  margin: 0px auto;
+}
+
+.main-footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+ 
+}
+
+.footer-flex, .footer-1, .footer-2, .footer-3 {
+  max-width: 300px;
+}
+
+
+.foot {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.foot img {
+  width: 50px;
+  height: auto;
+}
+
+.foot-title h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.foot-describe {
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.footer-2 .list {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-2 .list h3 {
+  margin-bottom: 10px;
+}
+
+.footer-2 .list .item a {
+  color: white;
+  text-decoration: none;
+  
+}
+
+.footer-2 .list .item a:hover {
+  color: #FFD700;
+}
+
+.footer-3 h3 {
+  margin-bottom: 10px;
+}
+
+.footer-3 img {
+  width: 30px;
+  margin-right: 10px;
+  
+}
+
+.footer-3 img:hover {
+  background-color: beige;
+}
+
+
+
+
   @media screen and (max-width:576px) {
     .bnner-container{
         flex-direction: column-reverse;
@@ -253,11 +378,33 @@ margin-top: -157px;
        width: 100%;
     }
    
+    .nav-links,.contact{
+      display: none;
+    }
+   
+   
    .card{
     flex-direction: column;
      padding: 10px;
     gap: 10px;
    
    } 
+   .story1{
+    display: none;
+   }
+   .grid-container{
+    grid-template-columns: repeat(1,1fr);
+   }
+   .btn1{
+  
+   margin: 20px 0px 20px 100px;
+    }
+    .main-footer{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+    }
+
+
+   
   }
  
